# rode

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
src/: agent.rs  app.rs  chat.rs  config.rs  input.rs  main.rs  message.rs  provider.rs  render.rs  repl.rs  state.rs  tool.rs  ui.rs  utils.rs
src/agent/: mod.rs  provider.rs  session.rs  store.rs
src/tools/: bash.rs  edit_file.rs  mod.rs  read_file.rs  write_file.rs
src/tui/: commands.rs  input.rs  line.rs  mod.rs  scroll.rs
