[package]
name = "rode"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.24.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.35.1"
anyhow = "1.0"
dotenv = "0.15.0"

[[bin]]
name = "rode"
path = "src/main.rs"
