[package]
name = "rode"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.53.0", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
async-openai = { version = "0.41.1", features = ["chat-completion"] }
async-openai-macros = "0.3.0"
futures = "0.3.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
termimad = "0.35.1"
anyhow = "1.0.103"
dotenv = "0.15.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
ansi-to-tui = "7.0.0"
unicode-width = "0.2"
uuid = { version = "1.24.0", features = ["v7"] }

[[bin]]
name = "rode"
path = "src/main.rs"
