[package]
name = "rode"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.53.1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
async-openai = { version = "0.41.1", features = ["chat-completion"] }
async-openai-macros = "0.3.0"
futures = "0.3.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
termimad = "0.35.1"
async-trait = "0.1.91"
anyhow = "1.0.104"
config = "0.15"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.2"
ansi-to-tui = "8.0.1"
unicode-width = "0.2"
uuid = { version = "1.24.0", features = ["v7"] }

[[bin]]
name = "rode"
path = "src/main.rs"
